7 September 2006: Wouter
	- bumped version to 3.0.2.
	- Nice configuration error when you had the wrong zone name in the
	  nsd.conf file. Zonec will give an error already.
	- When you start a secondary zone without a zone file, you get
	  a much nicer error message, warning you of the zone transfer.
	- Credits for prerelease testers; Thanks guys!

6 September 2006: Wouter
	- Fixed nsd-patch so that it writes the SOA at the start of the file.
	- test tpkg that tests for the bug, has multiple rrsets at zone apex
	  and does nsd-patch followed by zonec.
	  Previous tests did not catch this: they used nsd-xfer to test zone
	  contents, or only checked the zone-file after nsd-patch.
	- version number bumped to 3.0.1.
	- svn tag 3_0_1 made.

5 September 2006: Wouter
	- differences file improvements.
	- created 3.0.0 release in svn tags.

4 September 2006: Wouter
	- From suggestions by Bin Zhang:
		- nsdc restart does not fail if nsd was not running.
		- fixes to man pages, wrong locations for files.
	- NSEC3-PARAM has no optout bit in presentation format.
	- NSEC3PARAM spelling.
	- differences in latex format (needs nlnetlabs housestyle).

31 August 2006: Wouter
	- Fix for tsig size still set when data is null ptr.
	- Fix configure for NetBSD (1.6 - 2.0) to find struct timespec.
	- DIFFERENCES file completion.

30 August 2006: Wouter
	- Print error nicely when nonblocking connect fails on systems
	  in a portable way.
	- doc/UPGRADING document to assist NSD 2 to 3 upgrades.
	- updates of error print - ignore EINPROGRESS if we check too early.
	- wait for select writable before testing for connect error.
	- echo "" >&2 is not as portable as we would like, removed from nsdc.
	- fixed debug print of a null ptr.
	- fixed bug where query for CNAME that points to unserved zone caused
	  nullptr exception on empty zone ptr. Now original zone is restored
	  after CNAME-pointed data is added to the packet.
	  Test in dname.tpkg. Reported by Kai.