@@ -1,3 +1,11 @@
+11 September 2006: Wouter
+	- nsdc now more portable in use of 'which'.
+	  Does not only look at exit code but also checks for '^no ' string.
+	- nsd-patch does a chdir to zonesdir for relative difffile or dbfile
+	  path names.
+	- nsdc handles zonesdir: for relative pidfile, dbfile, difffile 
+	  pathnames.
+
 7 September 2006: Wouter
 	- bumped version to 3.0.2.
 	- Nice configuration error when you had the wrong zone name in the
